<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_card_content"
        style="@style/Card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/real_name"
                    style="@style/Name"
                    tools:text="@string/name" />

                <TextView
                    android:id="@+id/username"
                    style="@style/SubTitle"
                    tools:text="@string/username" />

                <TextView
                    android:id="@+id/job"
                    style="@style/Name"
                    android:layout_marginBottom="5dp"
                    android:text="@string/job" />

                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/card"
                    style="@style/CardTwo">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/gradient_background"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="70dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@null"
                                    android:padding="5dp"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/repo_white" />

                                <TextView
                                    android:id="@+id/repo"
                                    style="@style/BoxNumber"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textColor="@color/white_background"
                                    tools:text="@string/number_sample" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/repo_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/repos"
                                android:textColor="@color/white_background"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View style="@style/View2"></View>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="70dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@null"
                                    android:padding="5dp"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/follower_white" />

                                <TextView
                                    android:id="@+id/followers"
                                    style="@style/BoxNumber"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textColor="@color/white_background"
                                    tools:text="@string/number_sample" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/followers_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/followers"
                                android:textColor="@color/white_background"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View style="@style/View2"></View>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="0dp"
                                    android:layout_height="70dp"
                                    android:layout_weight="1"
                                    android:contentDescription="@null"
                                    android:padding="5dp"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/following_white" />

                                <TextView
                                    android:id="@+id/following"
                                    style="@style/BoxNumber"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textColor="@color/white_background"
                                    tools:text="@string/number_sample" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/following_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:text="@string/following"
                                android:textColor="@color/white_background"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                style="@style/SubUserBio"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:text="@string/menu_item2"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_bio"
                style="@style/UserBio"
                tools:text="@string/user_bio" />

            <View style="@style/View">
            </View>

            <TextView
                style="@style/SubUserBio"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:text="@string/information"
                android:textAlignment="textStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location"
                style="@style/Link"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/ic_action_location"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_action_location"
                android:textAlignment="textStart"
                tools:text="@string/location" />

            <TextView
                android:id="@+id/blog"
                style="@style/Link"
                android:autoLink="web"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/ic_action_blog"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_action_blog"
                android:textAlignment="textStart"
                tools:text="@string/github_link" />

            <TextView
                android:id="@+id/github_url"
                style="@style/Link"
                android:layout_gravity="start"
                android:autoLink="web"
                android:drawableLeft="@drawable/github_logo"
                android:drawablePadding="6dp"
                android:drawableStart="@drawable/github_logo"
                android:textAlignment="textStart"
                tools:text="@string/github_link" />

            <View style="@style/View">
            </View>

            <Button
                android:id="@+id/share_button"
                style="@style/CardButton"
                android:text="@string/button_text" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>