<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="invisible">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:fitsSystemWindows="true"
            app:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/navi_wallpaper"
                    app:layout_collapseMode="parallax" />

                <!--

                    <View
                        android:id="@+id/view_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#D212"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax" /> -->

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include
                android:id="@+id/user_card_content"
                layout="@layout/user_content" />

        </android.support.v4.widget.NestedScrollView>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/large_avatar_size"
            android:layout_height="@dimen/large_avatar_size"
            android:layout_margin="@dimen/large_avatar_margin"
            android:background="@drawable/circle_gradient"
            android:padding="@dimen/avatar_padding"
            android:src="@drawable/avatar"
            app:civ_border_color="#ffff"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:elevation="15dp"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|center_horizontal" />
    </android.support.design.widget.CoordinatorLayout>

    <RelativeLayout
        android:id="@+id/loading_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            style="?android:progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loading_progress_bar"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/refresh_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:id="@+id/disconnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="16dp"
            android:drawableTop="@drawable/disconnected"
            android:maxLines="2"
            android:text="@string/internet_connection"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/refresh_button"
            style="@style/CardButton"
            android:layout_below="@id/disconnected"
            android:layout_centerInParent="true"
            android:text="@string/button_refresh" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
